src/test/resources/syntax/invalid/target_method_duplicate_param.unpick
unpick v3
target_method foo.Bar baz ()V
    param 0 a
    param 0 b